--- a/deployment.yaml
+++ b/deployment.yaml
@@ -4,7 +4,12 @@ metadata:
   name: python-demo
   namespace: default
 spec:
-  replicas: 1
+  replicas: 2
+  strategy:
+  type: RollingUpdate
+  rollingUpdate:
+    maxSurge: 1
+    maxUnavailable: 25%
   selector:
     matchLabels:
       app: web
