--- a/deployment.yaml
+++ b/deployment.yaml
@@ -21,6 +21,13 @@ spec:
       containers:
       - name: app-site
         image: priya9272/python_project:2022-04-23--12-31
+        readinessProbe:
+          httpGet:
+             path: /
+             port: 8070
+             initialDelaySeconds: 5
+             periodSeconds: 5
+             successThreshold: 1
 ---
 apiVersion: v1
 kind: Service
