--- a/deployment.yaml
+++ b/deployment.yaml
@@ -4,12 +4,16 @@ metadata:
   name: python-demo
   namespace: default
 spec:
-  replicas: 2
+  replicas: 3
+  selector:
+   matchLabels:
+     app:web
+  minReadySeconds: 10
   strategy:
-  type: RollingUpdate
-  rollingUpdate:
-    maxSurge: 1
-    maxUnavailable: 25%
+   rollingUpdate:
+     maxSurge: 1
+     maxUnavailable: 0
+   type: RollingUpdate
   selector:
     matchLabels:
       app: web
@@ -22,12 +26,10 @@ spec:
       - name: app-site
         image: priya9272/python_project:2022-04-23--12-31
         readinessProbe:
-          httpGet:
-             path: /
-             port: 8070
-             initialDelaySeconds: 5
-             periodSeconds: 5
-             successThreshold: 1
+          tcpSocket:
+            port: 8070
+          initialDelaySeconds: 5
+          periodSeconds: 10
 ---
 apiVersion: v1
 kind: Service
